@@ -1,14 +1,0 @@
-language: c
-
-sudo: required
-dist: xenial
-
-before_install:
-  - sudo apt-get update
-  - sudo apt-get install -y autoconf automake pkg-config m4 libsndfile-dev libjack-dev libfftw3-dev libcairo2-dev libsamplerate0-dev
-
-script:
-  - ./autogen.sh
-  - ./configure
-  - make check
-  - make distcheck
