@@ -1,8 +1,7 @@
 sndfile-tools
 -------------
 
-[![Build Status](https://secure.travis-ci.org/erikd/sndfile-tools.png?branch=master)](http://travis-ci.org/erikd/sndfile-tools)
-
+![build](https://github.com/libsndfile/sndfile-tools/workflows/C/C++%20CI/badge.svg)
 
 `sndfile-tools` is a collection of programs (written in C) to do interesting
 things with sound files.
